--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,22 @@ body {
   padding: 0%;
   scroll-behavior: smooth;
   font-family: 'Roboto', sans-serif;
+  background-color: #040d14;
+
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #040d14;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #171717;
+  border-radius: 10px;
 }
