--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -26,7 +26,7 @@
 }
 
 .box .poster{
-    background: #2f33368a;
+    background-color: #2f33368a;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 10px;
